--- a/spooky-spaces-service/src/test/resources/application.properties
+++ b/spooky-spaces-service/src/test/resources/application.properties
@@ -1,4 +1,4 @@
 # URL for the "production" database
-spring.datasource.url=jdbc:mysql://localhost:3307/schema-test
+spring.datasource.url=jdbc:mysql://localhost:3307/spooky_spaces_prod
 spring.datasource.username=root
 spring.datasource.password=top-secret-password
