--- a/spooky-spaces-react/package.json
+++ b/spooky-spaces-react/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.21.3",
     "google-map-react": "^2.1.9",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "use-places-autocomplete": "^1.9.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
