--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,48 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Compiled class file
+*.class
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Log file
+*.log
 
-# testing
-/coverage
 
-# production
-/build
+# BlueJ files
+*.ctxt
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/.history
 
-package.json*
-package-lock.json*
-package.json
-package-lock.json
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+
+# BlueJ files
+*.ctxt
+
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+
+node_modules/
+.idea/
+out/
+target/
